--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -178,7 +178,9 @@ en:
   net_suite_connections:
     description:
       connected_html: This connection has been setup to sync your Namely profiles to NetSuite on a daily basis.
-      disconnected_html: NetSuite is used to manage your financial operations.  This connector gives you the power to sync your Namely HR employees into your NetSuite application seamlessly on a daily basis.
+      disconnected_html: >
+        NetSuite is used to manage your financial operations.  This connector gives you the power to sync your Namely HR employees into your NetSuite application seamlessly on a daily basis.
+        To view more info, visit: <a href="https://namely.zendesk.com/hc/en-us/articles/213699858-Namely-Connect-NetSuite-Setup">our FAQ</a>
     authentication_form:
       help: >
         Please note that these credentials are needed for initial connection to
